--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "framer-motion": "^12.23.12",
