--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
+    "@radix-ui/react-accordion": "^1.2.12",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
+    "boring-avatars": "^2.0.2",
+    "chart.js": "^4.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
@@ -22,15 +27,20 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-calendar": "^6.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-date-picker": "^12.0.1",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "recharts": "^3.2.1",
+    "swiper": "^12.0.2",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0"
   }
 }
