--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.2.1",
+    "sweetalert2": "^11.23.0",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1"
   },
